<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dip"
	    android:layout_marginLeft="5dip"
	    android:layout_marginBottom="5dip"
	    android:text="@string/explorer"
	    style="@style/AppTitle"
	    />
    
    <ImageView android:id="@+id/event_image"
        android:contentDescription="@string/app_name"
        android:layout_marginLeft="5dip"
	    android:layout_marginBottom="5dip"
	    android:visibility="gone"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        />
    
    <TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dip"
	    android:layout_marginLeft="5dip"
	    android:layout_marginBottom="2dip"
	    android:text="@string/name"
	    style="@style/Titles"
	    />
    
	<TextView android:id="@+id/event_title"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dip"
	    android:layout_marginLeft="10dip"
	    android:layout_marginBottom="2dip"
	    android:text="@string/blank"
	    style="@style/Details"
	    />
	
	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dip"
	    android:layout_marginLeft="5dip"
	    android:layout_marginBottom="2dip"
	    android:text="@string/with"
	    style="@style/Titles"
	    />
	
	<TextView android:id="@+id/event_tags"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dip"
	    android:layout_marginLeft="10dip"
	    android:layout_marginBottom="2dip"
	    android:text="@string/blank"
	    style="@style/Details"
	    />
	
	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dip"
	    android:layout_marginLeft="5dip"
	    android:layout_marginBottom="2dip"
	    android:text="@string/time"
	    style="@style/Titles"
	    />
	
	<TextView android:id="@+id/event_time"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dip"
	    android:layout_marginLeft="10dip"
	    android:layout_marginBottom="2dip"
	    android:text="@string/blank"
	    style="@style/Details"
	    />
	
	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dip"
	    android:layout_marginLeft="5dip"
	    android:layout_marginBottom="2dip"
	    android:text="@string/location"
	    style="@style/Titles"
	    />
	
	<TextView android:id="@+id/event_location"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dip"
	    android:layout_marginLeft="10dip"
	    android:layout_marginBottom="2dip"
	    android:text="@string/blank"
	    style="@style/Details"
	    />
	
	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dip"
	    android:layout_marginLeft="5dip"
	    android:layout_marginBottom="2dip"
	    android:text="@string/details"
	    style="@style/Titles"
	    />
	
		<TextView android:id="@+id/event_description"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dip"
	    android:layout_marginLeft="10dip"
	    android:layout_marginBottom="5dip"
	    android:text="@string/blank"
	    android:lines="10"
	    style="@style/Details"
	    />
    
</LinearLayout>
</ScrollView>
