<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_margin="10dip"
        style="@style/AppTitle"
        />
    
	   <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:padding="10dip"
	        >
	        
	       <TextView android:id="@+id/directions"
        		android:layout_width="match_parent"
       		 	android:layout_height="wrap_content"
        		android:text="@string/instructions"
        		android:layout_marginLeft="5dip"
        		android:layout_marginBottom="5dip"
        		style="@style/AppDirections"
        	/>
	        
	        <Button android:id="@+id/new_note"
	            android:text="@string/make_note"
	            style="@style/TitleButton"
	            android:layout_marginLeft="5dip"
	            android:layout_marginBottom="5dip"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            />     
	     
	        <Button android:id="@+id/view_note"
	            android:text="@string/view_notes"
	            style="@style/TitleButton"
	            android:layout_marginLeft="5dip"
	            android:layout_marginBottom="5dip"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            />   
	        
	    </LinearLayout>
    
</LinearLayout>
